fixed issue with margins where the rows were getting hidden by the header. changed colours to black to aid with layout and increased the font size.

--- a/web/christmas_bird_count.css
+++ b/web/christmas_bird_count.css
@@ -1,6 +1,6 @@
 body {
   font-family: Helvetica, sans-serif;
-  font-size:10px;
+  font-size:12px;
   margin-top: 0px;
 }
 
@@ -19,7 +19,7 @@ g.species.active {
 }
 
 text.label, text.column, .legend {
-  font-size:12px;
+  font-size:14px;
   font-weight:bold;
 }
 
@@ -31,6 +31,11 @@ text.value {
 .div-header {
   position: fixed;
   background-color: white;
+  height: 287px;
+}
+
+.div-body svg {
+  margin-top: 287px;
 }
 
 .main {
